accessible sub menus

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,11 +1,11 @@
 <table>
     <tr>
         <td><a href="/">Home</a></td>
-        <td><a href="/housing">Housing</a></td>
-        <td><a href="/food">Food</a></td>
-        <td><a href="/sports">Sports</a></td>
-        <td><a href="/activities">Activities</a></td>
-        <td><a href="/family-night">Family-Night</a></td>
-        <td><a href="/gallery">Gallery</a></td>
+        <td><a href="dolphins2/housing">Housing</a></td>
+        <td><a href="dolphins2/food">Food</a></td>
+        <td><a href="dolphins2/sports">Sports</a></td>
+        <td><a href="dolphins2/activities">Activities</a></td>
+        <td><a href="dolphins2/family-night">Family-Night</a></td>
+        <td><a href="dolphins2/gallery">Gallery</a></td>
     </tr>
 </table>
