BMI information and Login

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,11 +1,19 @@
 <table>
     <tr>
         <td><a href="/">Home</a></td>
-        <td><a href="dolphins2/housing">Housing</a></td>
-        <td><a href="dolphins2/food">Food</a></td>
-        <td><a href="dolphins2/sports">Sports</a></td>
-        <td><a href="dolphins2/activities">Activities</a></td>
-        <td><a href="dolphins2/family-night">Family-Night</a></td>
-        <td><a href="dolphins2/gallery">Gallery</a></td>
+        <td><a href="/bmi">BMI Info</a></td>
+        <td><a href="/food">Nutrition</a></td>
+        <td><a href="/sports">Workouts</a></td>
+        <td><a href="/activities">Calender</a></td>
+        <td><a href="/family-night">Gyms</a></td>
+        <td><a href="/gallery">Tips/Hacks</a></td>
+    </tr>
+</table>
+
+<!--Login Frontmatter-->
+<table class="cool">
+    <tr>
+        <td><p class="login">Username</p><input type="text"></td>
+        <td><p class="login">Password</p><input type="text"></td>
     </tr>
 </table>
