--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,3 +14,11 @@
     flex: 33.33%;
     padding: 5px;
   }
+
+table.cool {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  align-self: center;
+}
