--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,12 +1,14 @@
+
+<!--When your on a local server remove the dolphins2 part in search to see the page-->
 <table>
     <tr>
         <td><a href="/">Home</a></td>
-        <td><a href="/bmi">BMI Info</a></td>
-        <td><a href="/food">Nutrition</a></td>
-        <td><a href="/sports">Workouts</a></td>
-        <td><a href="/activities">Calender</a></td>
-        <td><a href="/family-night">Gyms</a></td>
-        <td><a href="/gallery">Tips/Hacks</a></td>
+        <td><a href="dolphins2/bmi">BMI Info</a></td>
+        <td><a href="dolphins2/food">Nutrition</a></td>
+        <td><a href="dolphins2/sports">Workouts</a></td>
+        <td><a href="dolphins2/activities">Calender</a></td>
+        <td><a href="dolphins2/family-night">Gyms</a></td>
+        <td><a href="dolphins2/gallery">Tips/Hacks</a></td>
     </tr>
 </table>
 
