Final change for table

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -3,12 +3,12 @@
 <table>
     <tr>
         <td><a href="/">Home</a></td>
-        <td><a href="dolphins2/bmi">BMI Info</a></td>
-        <td><a href="dolphins2/food">Nutrition</a></td>
-        <td><a href="dolphins2/sports">Workouts</a></td>
-        <td><a href="dolphins2/activities">Calender</a></td>
-        <td><a href="dolphins2/family-night">Gyms</a></td>
-        <td><a href="dolphins2/gallery">Tips/Hacks</a></td>
+        <td><a href="https://jakewarren2414.github.io/dolphins2/bmi">BMI Info</a></td>
+        <td><a href="https://jakewarren2414.github.io/dolphins2/food">Nutrition</a></td>
+        <td><a href="https://jakewarren2414.github.io/dolphins2/sports">Workouts</a></td>
+        <td><a href="https://jakewarren2414.github.io/dolphins2/activities">Calender</a></td>
+        <td><a href="https://jakewarren2414.github.io/dolphins2/family-night">Gyms</a></td>
+        <td><a href="https://jakewarren2414.github.io/dolphins2/gallery">Tips/Hacks</a></td>
     </tr>
 </table>
 
