--- a/_includes/home.html
+++ b/_includes/home.html
@@ -2,7 +2,7 @@
 <!--When your on a local server remove the dolphins2 part in search to see the page-->
 <table>
     <tr>
-        <td><a href="/">Home</a></td>
+        <td><a href="https://jakewarren2414.github.io/dolphins2/">Home</a></td>
         <td><a href="https://jakewarren2414.github.io/dolphins2/bmi">BMI Info</a></td>
         <td><a href="https://jakewarren2414.github.io/dolphins2/food">Nutrition</a></td>
         <td><a href="https://jakewarren2414.github.io/dolphins2/sports">Workouts</a></td>
