--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,5 +1,6 @@
 
 <!--When your on a local server remove the dolphins2 part in search to see the page-->
+<!--Example to see your updated page: http://127.0.0.1:4000/bmi-->
 <table>
     <tr>
         <td><a href="https://jakewarren2414.github.io/dolphins2/">Home</a></td>
@@ -13,9 +14,17 @@
 </table>
 
 <!--Login Frontmatter-->
-<table class="cool">
-    <tr>
-        <td><p class="login">Username</p><input type="text"></td>
-        <td><p class="login">Password</p><input type="text"></td>
-    </tr>
-</table>
+<div style="padding: 5px;">
+    <h3>Login</h3>
+</div>
+<div style="padding:5px">
+    <label for="username">Username</label>
+    <input type="text">
+</div>
+<div style="padding:5px">
+    <label for="password">Password</label>
+    <input type="text">
+</div>
+<div style="padding:5px">
+    <p> Dont have an account? <a href="https://jakewarren2414.github.io/dolphins2/">Sign Up</a></p>
+</div>
