--- a/_includes/home.html
+++ b/_includes/home.html
@@ -9,7 +9,7 @@
         <td><a href="https://jakewarren2414.github.io/dolphins2/sports">Workouts</a></td>
         <td><a href="https://jakewarren2414.github.io/dolphins2/activities">Calender</a></td>
         <td><a href="https://jakewarren2414.github.io/dolphins2/family-night">Gyms</a></td>
-        <td><a href="https://jakewarren2414.github.io/dolphins2/gallery">Tips/Hacks</a></td>
+        <td><a href="https://jakewarren2414.github.io/dolphins2/gallery">Agile Manifesto</a></td>
     </tr>
 </table>
 
