--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,4 +19,17 @@ table.cool {
   display: flex;
 }
 
+div.signup {
+  width: 40%;
+  border-radius: 25px solid #2596be;
+  border: 3px solid #2596be;
+  padding: 20px;
+  text-align: left;
+  background-color: rgba(37, 150, 190, 50%);
+}
+
+p.signup {
+  color: black;
+}
+
 
