--- a/_includes/home.html
+++ b/_includes/home.html
@@ -7,24 +7,8 @@
         <td><a href="https://jakewarren2414.github.io/dolphins2/bmi">BMI Info</a></td>
         <td><a href="https://jakewarren2414.github.io/dolphins2/food">Nutrition</a></td>
         <td><a href="https://jakewarren2414.github.io/dolphins2/sports">Workouts</a></td>
-        <td><a href="https://jakewarren2414.github.io/dolphins2/activities">Calender</a></td>
+        <td><a href="https://jakewarren2414.github.io/dolphins2/calender">Calender</a></td>
         <td><a href="https://jakewarren2414.github.io/dolphins2/family-night">Gyms</a></td>
         <td><a href="https://jakewarren2414.github.io/dolphins2/gallery">Agile Manifesto</a></td>
     </tr>
 </table>
-
-<!--Login Frontmatter-->
-<div style="padding: 5px;">
-    <h3>Login</h3>
-</div>
-<div style="padding:5px">
-    <label for="username">Username</label>
-    <input type="text">
-</div>
-<div style="padding:5px">
-    <label for="password">Password</label>
-    <input type="text">
-</div>
-<div style="padding:5px">
-    <p> Dont have an account? <a href="https://jakewarren2414.github.io/dolphins2/">Sign Up</a></p>
-</div>
