--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,20 +12,32 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     {% include head-custom.html %}
   </head>
-  <body>
+  <body>    
+
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
-    <header class="page-header" role="banner">
+    <header class="page-header" role="banner" style="padding: 350px">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+      <div class="project-tagline"><label id="jsClock"></label></div>
       {% if site.github.is_project_page %}
-        <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
+      <div style="padding: 15 px;">
+        <a href="https://jakewarren2414.github.io/dolphins2/#Title" class="btn">Home</a>
+        <a href="https://jakewarren2414.github.io/dolphins2/bmi#calc" class="btn">BMI Info</a>
+        <a href="https://jakewarren2414.github.io/dolphins2/food" class="btn">Nutrition</a>
+        <a href="https://jakewarren2414.github.io/dolphins2/sports" class="btn">Workouts</a>
+        <a href="https://jakewarren2414.github.io/dolphins2/calender" class="btn">Calender</a>
+        <a href="https://jakewarren2414.github.io/dolphins2/family-night class=" class="btn">Gyms</a>
+        <a href="https://jakewarren2414.github.io/dolphins2/gallery" class="btn">Agile Manifesto</a>
+      </div>
       {% endif %}
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
     </header>
+
+    {% include home.html %}
 
     <main id="content" class="main-content" role="main">
       {{ content }}
