--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
     <header class="page-header" role="banner" style="padding: 350px">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+      <h2 class="project-tagline"><a href="https://jakewarren2414.github.io/dolphins2/login/#L" class="loginb">Login</a> | <a href="#" class="loginb">Signup</a></h2>
       <div class="project-tagline"><label id="jsClock"></label></div>
       {% if site.github.is_project_page %}
       <div style="padding: 15 px;">
