Changes to be committed: 	modified:   _includes/home.html 	deleted:    assets/css/signup.js 	renamed:    assets/css/login.js -> assets/js/login.js 	new file:   package.json 	new file:   signup.js 	modified:   signup.md

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -13,7 +13,7 @@
     </tr>
 </table>
 <body>
-    <script src="{{ '/assets/css/login.js' | relative_url }}"></script>
+    <script src="{{ '/assets/js/login.js' | relative_url }}"></script>
     <script>
         setInterval(()=>{
             var timer = new Date();
