--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
         <a href="https://jakewarren2414.github.io/dolphins2/food" class="btn">Nutrition</a>
         <a href="https://jakewarren2414.github.io/dolphins2/sports" class="btn">Workouts</a>
         <a href="https://jakewarren2414.github.io/dolphins2/calender" class="btn">Calender</a>
-        <a href="https://jakewarren2414.github.io/dolphins2/family-night class=" class="btn">Gyms</a>
+        <a href="https://jakewarren2414.github.io/dolphins2/CRUD" class="btn">CRUD</a>
         <a href="https://jakewarren2414.github.io/dolphins2/gallery" class="btn">Agile Manifesto</a>
       </div>
       {% endif %}
