--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
       <div class="project-tagline"><label id="jsClock"></label></div>
       {% if site.github.is_project_page %}
       <div style="padding: 15 px;">
-        <a href="https://jakewarren2414.github.io/dolphins2/#Title" class="btn">Home</a>
+        <a href="https://jakewarren2414.github.io/dolphins2/" class="btn">Home</a>
         <a href="https://jakewarren2414.github.io/dolphins2/bmi#calc" class="btn">BMI Info</a>
         <a href="https://jakewarren2414.github.io/dolphins2/food" class="btn">Nutrition</a>
         <a href="https://jakewarren2414.github.io/dolphins2/sports" class="btn">Workouts</a>
