added title to food

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
       <div style="padding: 15 px;">
         <a href="https://jakewarren2414.github.io/dolphins2/" class="btn">Home</a>
         <a href="https://jakewarren2414.github.io/dolphins2/bmi#calc" class="btn">BMI Info</a>
-        <a href="https://jakewarren2414.github.io/dolphins2/food" class="btn">Nutrition</a>
+        <a href="https://jakewarren2414.github.io/dolphins2/food#Title" class="btn">Nutrition</a>
         <a href="https://jakewarren2414.github.io/dolphins2/sports" class="btn">Workouts</a>
         <a href="https://jakewarren2414.github.io/dolphins2/calender" class="btn">Calender</a>
         <a href="https://jakewarren2414.github.io/dolphins2/CRUD" class="btn">CRUD</a>
