--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
 
     {% include home.html %}
 
-    <main id="content" class="main-content" role="main">
+    <main id="content" role="main">
       {{ content }}
 
       <footer class="site-footer">
