--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,11 +14,12 @@
   </head>
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
-
+    <script src="{{ '/assets/js/clock.js' | relative_url }}"></script>
     <header class="page-header" role="banner" style="padding: 25%">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
+      <h2 class="project-tagline" id="jsClock"></h2>
       <div style="padding: 15 px;">
         <a href="https://jakewarren2414.github.io/dolphins2/" class="btn">Home</a>
         <a href="https://jakewarren2414.github.io/dolphins2/bmi#calc" class="btn">BMI Info</a>
