--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -49,3 +49,8 @@ div.column {
   flex: 100%;
   padding: 10%;
 }
+
+.tasks {
+  padding: 5px;
+  background-color: (to top left, #155799, #159957);
+}
