--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,12 +21,12 @@ table.cool {
 }
 
 div.signup {
-  width: 40%;
+  width: 100%;
   border-radius: 25px solid #2596be;
-  border: 3px solid #2596be;
+  border: 3px solid black;
   padding: 20px;
   text-align: left;
-  background-color: rgba(37, 150, 190, 50%);
+  background-image: linear-gradient(120deg, #155799, #159957)
 }
 
 p.signup {
@@ -53,4 +53,29 @@ div.column {
 .tasks {
   padding: 5px;
   background-color: (to top left, #155799, #159957);
+}
+
+input[type=text], input[type=password], input[type=number] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: none;
+  background: #f1f1f1;
+}
+
+label.signupL {
+  color: black;
+}
+
+.signupbtn {
+  float: left;
+  width: 100%;
+  background-color: #159957;
+  border: 0px;
+  color: black;
+}
+
+button:hover {
+  opacity:2;
 }
