--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
       <h2 class="project-tagline" id="jsClock"></h2>
+      <h2 class="project-tagline"> <a href="https://jakewarren2414.github.io/dolphins2/login" style="color: white;">Login</a> | <a href="https://jakewarren2414.github.io/dolphins2/signup" style="color: white;">Signup</a></h2>
       <div style="padding: 15 px;">
         <a href="https://jakewarren2414.github.io/dolphins2/" class="btn">Home</a>
         <a href="https://jakewarren2414.github.io/dolphins2/bmi#calc" class="btn">BMI Info</a>
