--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,8 +20,22 @@ table.cool {
   display: flex;
 }
 
+.signcontain {
+  display: flex;
+}
+
 div.signup {
-  width: 100%;
+  flex: 1;
+  width: 50%;
+  border-radius: 25px solid #2596be;
+  border: 3px solid black;
+  padding: 20px;
+  background-image: linear-gradient(120deg, #155799, #159957)
+}
+
+div.signup2 {
+  flex: 1;
+  width: 50%;
   border-radius: 25px solid #2596be;
   border: 3px solid black;
   padding: 20px;
@@ -70,7 +84,7 @@ label.signupL {
 
 .signupbtn {
   margin: auto;
-  width: 20%;
+  width: 100%;
   height: 50%;
   background-color: #159957;
   border: 0px;
