--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,14 +17,12 @@
   </head>
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
-    {% block user %}
     {% if user == "" %}
-    <a href = "{{url_for('login')}}">Login</a>
+    <a href = "https://jakewarren2414.github.io/dolphins2/login">Login</a>
     {% else %}
     <p>user: {{user}}</p>
-    <a href = "{{url_for('login')}}">Logout</a>
+    <a href = "https://jakewarren2414.github.io/dolphins2/login">Logout</a>
     {% endif %}
-    {% endblock user %}
     <script src="{{ '/assets/js/clock.js' | relative_url }}"></script>
     <header class="page-header" role="banner" style="padding: 25%">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
