--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,10 @@
     <p>user: {{user}}</p>
     <a href = "https://jakewarren2414.github.io/dolphins2/login">Logout</a>
     {% endif %}
+    <script>
+      console.log(user);
+    </script>
+    <script src="{{ '/assets/js/login.js' | relative_url }}"></script>
     <script src="{{ '/assets/js/clock.js' | relative_url }}"></script>
     <header class="page-header" role="banner" style="padding: 25%">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
