--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
       <div style="padding: 15 px;">
         <a href="https://jakewarren2414.github.io/dolphins2/" class="btn">Home</a>
         <a href="https://jakewarren2414.github.io/dolphins2/bmi#calc" class="btn">BMI Info</a>
-        <a href="https://jakewarren2414.github.io/dolphins2/food#foodtitle" class="btn">Nutrition</a>
+        <a href="https://jakewarren2414.github.io/dolphins2/food#food" class="btn">Nutrition</a>
         <a href="https://jakewarren2414.github.io/dolphins2/sportsquiz" class="btn">Sport Quiz</a>
         <a href="https://jakewarren2414.github.io/dolphins2/workout" class="btn">Workouts</a>
         <a href="https://jakewarren2414.github.io/dolphins2/calender" class="btn">Calender</a>
