Changes to be committed: 	modified:   _layouts/default.html 	modified:   assets/js/login.js 	modified:   calender.md 	modified:   login.md 	modified:   signup.md

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,8 @@
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
       <h2 class="project-tagline" id="jsClock"></h2>
-      <h2 class="project-tagline"> <a href="https://jakewarren2414.github.io/dolphins2/login" style="color: white;">Login</a> | <a href="https://jakewarren2414.github.io/dolphins2/signup" style="color: white;">Signup</a></h2>
+      <h2 id="login" class="project-tagline"></h2>
+      <h2 id = "logout" class="project-tagline"></h2>
       <div style="padding: 15 px;">
         <a href="https://jakewarren2414.github.io/dolphins2/" class="btn">Home</a>
         <a href="https://jakewarren2414.github.io/dolphins2/bmi#calc" class="btn">BMI Info</a>
@@ -52,3 +53,21 @@
     </main>
   </body>
 </html>
+<script>
+  function is_login() {
+    username = sessionStorage.getItem("uid");
+    const loginh2 = document.getElementById('login');
+    const logouth2 = document.getElementById('logout')
+    if (username == null) {
+      loginh2.innerHTML = `
+        <a href="https://jakewarren2414.github.io/dolphins2/login" style="color: white;">Login</a> | <a href="https://jakewarren2414.github.io/dolphins2/signup" style="color: white;">Signup</a>
+      `;
+    }
+    else {
+      logouth2.innerHTML = `
+      <a href="https://jakewarren2414.github.io/dolphins2/"style ="color: white;">Logout</a>
+      `;
+    }
+  }
+  is_login();
+</script>
