Changes to be committed: 	modified:   _layouts/default.html 	modified:   assets/js/login.js

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
         <a href="https://jakewarren2414.github.io/dolphins2/food#food" class="btn">Nutrition</a>
         <a href="https://jakewarren2414.github.io/dolphins2/sportsquiz" class="btn">Sport Quiz</a>
         <a href="https://jakewarren2414.github.io/dolphins2/workout" class="btn">Workouts</a>
-        <a href="https://jakewarren2414.github.io/dolphins2/calendercool" class="btn">Calender</a>
+        <a href="https://jakewarren2414.github.io/dolphins2/calender" class="btn">Calender</a>
         <a href="https://jakewarren2414.github.io/dolphins2/gallery" class="btn">Agile Manifesto</a>
       </div>
       {% endif %}
