Changes to be committed: 	modified:   _layouts/default.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,7 @@
     }
     else {
       logouth2.innerHTML = `
-      <a href="https://jakewarren2414.github.io/dolphins2/"style ="color: white;">Logout</a>
+      <a href="https://jakewarren2414.github.io/dolphins2/logout"style ="color: white;">Logout</a>
       `;
     }
   }
