--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -146,3 +146,17 @@ tr:hover.profile td.profile {
   opacity: 1;
 }
 
+#loginHead {
+  padding: 20px;
+  height: 20%;
+}
+
+#logininfo {
+  padding: 20px;
+  text-align: center;
+}
+
+.shadow {
+  box-shadow: 0 0 10px rgba(0,0,0,0.3); /* create a regular shadow */
+  backdrop-filter: blur(5px); /* apply a blur effect to the area behind the element */
+}
